RegExp /y flag incorrect handling of mixed-length alternation https://bugs.webkit.org/show_bug.cgi?id=157723

Reviewed by Filip Pizlo.

Source/JavaScriptCore:

Previously for sticky patterns, we were bailing out and exiting when backtracking
alternatives with dissimilar match lengths.  Deleted that code.  Instead, for
sticky patterns we need to process the backtracking except for advancing to the
next input index.

* yarr/YarrJIT.cpp:
(JSC::Yarr::YarrGenerator::backtrack):

LayoutTests:

Added tests for alternatives with shorter to longer lengths.

* js/regexp-sticky-expected.txt:
* js/script-tests/regexp-sticky.js:


Canonical link: https://commits.webkit.org/175869@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@200946 268f45cc-cd09-0410-ab3c-d52691b4dbfc